--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComfyCloud Diapers - Ultimate Comfort for Your Little One</title>
+    <meta name="description" content="A responsive product landing page for ComfyCloud Diapers by Brandy Cornett, showcasing HTML5, CSS3, conversion-focused design, and media integration for e-commerce marketing.">
+
     <link rel="stylesheet" href="styles.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
         <div class="logo-container">
-            <img id="header-img" src="https://cdn.logo.com/hotlink-ok/logo-social.png" alt="ComfyCloud Diapers Logo">
+            <img id="header-img" src="https://via.placeholder.com/150x50?text=ComfyCloud+Logo" alt="ComfyCloud Diapers Logo">
         </div>
         <nav id="nav-bar">
             <ul>
@@ -55,8 +60,8 @@
         <section id="how-it-works" class="page-section">
             <h2>See ComfyCloud in Action</h2>
             <div class="video-container">
-                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="ComfyCloud Diapers Product Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <p>Our diapers are designed with both baby and parent in mind. Watch our video to learn more about the innovative technology and care that goes into every ComfyCloud diaper.</p>
         </section>
 
